out
ncurses.c:17:1: error: unknown type name 'data_t'
data_t chopstick[PHILOS];
^
ncurses.c:290:31: error: use of undeclared identifier 'id'
        if (chopstick[data[0]].id == id)
                                     ^
ncurses.c:293:46: error: invalid operands to binary expression ('t_pphilo' (aka 'struct s_pphilo') and 'int')
                print_l_arm_blank(win, (positions[data[0]] + PHILOS - 1) % PHILOS);
                                        ~~~~~~~~~~~~~~~~~~ ^ ~~~~~~
ncurses.c:300:46: error: invalid operands to binary expression ('t_pphilo' (aka 'struct s_pphilo') and 'int')
                print_r_arm_blank(win, (positions[data[0]] + 1) % PHILOS);
                                        ~~~~~~~~~~~~~~~~~~ ^ ~
ncurses.c:306:2: error: unknown type name 'Z'
}Z
 ^
ncurses.c:309:1: error: expected identifier or '('
void print_win(WINDOW *win, t_pphilo positions[7])
^
6 errors generated.
main.c:19:1: error: unknown type name 'data_t'
data_t chopstick[PHILOS];
^
main.c:28:5: warning: implicit declaration of function 'init_positions' is invalid in C99 [-Wimplicit-function-declaration]
    init_positions(p.positions);
    ^
main.c:30:13: warning: implicit declaration of function 'init_ncurses_option' is invalid in C99 [-Wimplicit-function-declaration]
    p.win = init_ncurses_option();
            ^
main.c:30:11: warning: incompatible integer to pointer conversion assigning to 'WINDOW *' (aka 'struct _win_st *') from 'int' [-Wint-conversion]
    p.win = init_ncurses_option();
          ^ ~~~~~~~~~~~~~~~~~~~~~
main.c:34:23: error: use of undeclared identifier 'food_lock'
        pthread_mutex_init (&food_lock, NULL);
                             ^
main.c:35:9: error: use of undeclared identifier 'i'
        while (i < PHILOS) {
               ^
main.c:36:10: error: use of undeclared identifier 'i'
                p.id = i;
                       ^
main.c:37:34: error: use of undeclared identifier 'i'
                pthread_mutex_init (&chopstick[i], NULL);
                                               ^
main.c:38:57: error: operand of type 't_print' (aka 'struct s_print') where arithmetic or pointer type is required
                pthread_create (&philo[i], NULL, philosopher, (void *)p);
                                                                      ^
main.c:38:26: error: use of undeclared identifier 'i'
                pthread_create (&philo[i], NULL, philosopher, (void *)p);
                                       ^
main.c:39:23: error: use of undeclared identifier 'i'
                pthread_join (philo[i], NULL);
                                    ^
main.c:40:3: error: use of undeclared identifier 'i'
                i++;
                ^
main.c:46:10: error: unknown type name 'p_print'; did you mean 't_print'?
void    eat(p_print p, int *timeout, int *life)
            ^~~~~~~
            t_print
./philosopher.h:37:21: note: 't_print' declared here
}                   t_print;
                    ^
main.c:55:2: warning: implicit declaration of function 'print_phil' is invalid in C99 [-Wimplicit-function-declaration]
        print_phil(p.win, data, p.positions);
        ^
main.c:57:2: warning: implicit declaration of function 'rest' is invalid in C99 [-Wimplicit-function-declaration]
        rest(id, timeout, life);
        ^
main.c:57:7: error: use of undeclared identifier 'id'
        rest(id, timeout, life);
             ^
main.c:60:12: error: unknown type name 'p_print'; did you mean 't_print'?
void    think(p_print p, int *timeout, int *life)
              ^~~~~~~
              t_print
./philosopher.h:37:21: note: 't_print' declared here
}                   t_print;
                    ^
main.c:63:20: error: too few arguments to function call, expected 2, have 1
        down_chopsticks(id);
        ~~~~~~~~~~~~~~~   ^
./philosopher.h:41:1: note: 'down_chopsticks' declared here
void down_chopsticks (int, int);
^
main.c:66:2: error: use of undeclared identifier 'data'
        data[0] = p.id;
        ^
main.c:67:2: error: use of undeclared identifier 'data'
        data[1] = *life;
        ^
main.c:68:2: error: use of undeclared identifier 'data'
        data[2] = 0;
        ^
main.c:69:20: error: use of undeclared identifier 'data'
        print_phil(p.win, data, p.positions);
                          ^
main.c:75:2: warning: implicit declaration of function 'print_philo' is invalid in C99 [-Wimplicit-function-declaration]
        print_philo(id);
        ^
main.c:76:2: warning: implicit declaration of function 'print_chopstick' is invalid in C99 [-Wimplicit-function-declaration]
        print_chopstick(id);
        ^
main.c:80:11: error: unknown type name 'p_print'; did you mean 't_print'?
void    rest(p_print p, int *timeout, int *life)
             ^~~~~~~
             t_print
./philosopher.h:37:21: note: 't_print' declared here
}                   t_print;
                    ^
main.c:80:6: error: conflicting types for 'rest'
void    rest(p_print p, int *timeout, int *life)
        ^
main.c:57:2: note: previous implicit declaration is here
        rest(id, timeout, life);
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
7 warnings and 20 errors generated.
